(lang dune 3.4)

(name trampoline)

(generate_opam_files true)

(source
 (github QAhell/trampoline_ocaml))

(authors "Armin Heller <support@arminheller.de>")

(maintainers "Armin Heller <support@arminheller.de>")

(license "Apache-2.0")

(package
 (name trampoline)
 (version 0.1.0)
 (synopsis "A trampoline implementation")
 (description "A trampoline implementationtion")
 (depends ocaml dune)
 (tags (topics trampoline)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
